--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,70 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<% if false %>
+  <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
+  <%= render "devise/shared/links" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="row justify-content-md-center vertical-center">
+  <div class="col-sm-6">
+    <div class="card mx-auto">
+      <h2 class="text-center mt-4">Sign Up</h2>
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <div class="field mb-3 mt-4">
+
+            <%= f.label :email, class: "form-label" %><br />
+            <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "Email Address" %>
+
+          </div>
+          <div class="field mb-3">
+
+              <%= f.label :password, class: "form-label" %><br />
+              <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>              
+              <% if @minimum_password_length %>
+              <em> - <%= @minimum_password_length %> characters minimum</em>
+              <% end %><br />
+
+          </div>
+
+          <div class="field mb-4">
+
+              <%= f.label :password_confirmation, class: "form-label" %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>
+          </div>
+
+          <div class="actions mt-3 mb-4">
+            <%= f.submit "Log in", class: "btn btn-primary" %>
+          </div>
+          <%= render "devise/shared/links" %>
+
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
