--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,43 @@
-<h2>Forgot your password?</h2>
+<% if false %>
+  <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+    <div class="actions">
+      <%= f.submit "Send me reset password instructions" %>
+    </div>
+  <% end %>
+  <%= render "devise/shared/links" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+<div class="row justify-content-md-center vertical-center">
+  <div class="col-sm-6">
+    <div class="card mx-auto">
+      <h2 class="text-center mt-4">Forgot your Password?</h2>
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field mb-5 mt-5">
+
+            <%= f.label :email, class: "form-label" %><br />
+            <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "Email Address" %>
+
+          </div>
+
+          <div class="actions mt-3 mb-4">
+            <%= f.submit "Send me reset Password Instructions", class: "btn btn-primary" %>
+          </div>
+          <%= render "devise/shared/links" %>
+
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
