--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,7 @@
       <h2 class="text-center mt-4">Sign Up</h2>
       <div class="card-body">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
           <div class="field mb-3 mt-4">
 
             <%= f.label :email, class: "form-label" %><br />
@@ -59,7 +60,7 @@
           </div>
 
           <div class="actions mt-3 mb-4">
-            <%= f.submit "Log in", class: "btn btn-primary" %>
+            <%= f.submit "Sign Up", class: "btn btn-primary" %>
           </div>
           <%= render "devise/shared/links" %>
 
