Added UI to edit user account and delete account and minor ui changes to other devise pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,6 +22,14 @@ body {
   width: 75%;
 }
 
+.card.card-small {
+  height: 400px;
+}
+
+.card.card-long {
+  height: 760px;
+}
+
 .form-control {
   border-radius: 20px;
 }
