--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -19,7 +19,7 @@
 
 <div class="row justify-content-md-center vertical-center">
   <div class="col-sm-6">
-    <div class="card mx-auto">
+    <div class="card mx-auto card-small">
       <h2 class="text-center mt-4">Forgot your Password?</h2>
       <div class="card-body">
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
