--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -18,6 +18,17 @@
 
 
 <div class="row justify-content-md-center vertical-center">
+  <div class="top">
+    <div class="text-center cover-header">
+      <h2>SKILLOPEDIA</h2>
+    </div>
+    <div class="text-center cover-sub-header">
+      <h4>Welcome Back!</h4>
+    </div>
+    <div class="text-center cover-text">
+      <p>Use these awesome forms for login or create</p>
+    </div>
+  </div>
   <div class="col-sm-6">
     <div class="card mx-auto card-small">
       <h2 class="text-center mt-4">Forgot your Password?</h2>
