--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,17 @@
 <% end %>
 
 <div class="row justify-content-md-center vertical-center">
+  <div class="top">
+    <div class="text-center cover-header">
+      <h2>SKILLOPEDIA</h2>
+    </div>
+    <div class="text-center cover-sub-header">
+      <h4>Welcome!</h4>
+    </div>
+    <div class="text-center cover-text">
+      <p>Create your account now!</p>
+    </div>
+  </div>
   <div class="col-sm-6">
     <div class="card mx-auto">
       <h2 class="text-center mt-4">Sign Up</h2>
