Added Dashboard functionality with a crude UI

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,3 +52,11 @@ body {
 .cover-text {
   color: white;
 }
+
+.sidebar {
+  background-color: gray;
+}
+
+.team-listing {
+  background-color: white;
+}
