Full functionality of Dashboard team members table using ruby on rails

--- a/app/views/dashboard/_user.html.erb
+++ b/app/views/dashboard/_user.html.erb
@@ -22,10 +22,10 @@
             <%= skill.skill_name %>
           <% end %>
         </td>
-        <td><%= user.role %></td>
+        <td><%= user.master_role.role_name %></td>
         <td>
           <% MasterProject.find(user.master_project_ids).each do |project| %>
-            <%= proj_name %>
+            <%= project.proj_name %>
           <% end %>
         </td>
       </tr>
