--- a/app/views/dashboard/_user.html.erb
+++ b/app/views/dashboard/_user.html.erb
@@ -16,15 +16,15 @@
         <th scope="row"></th>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= Login.find(user.login_id).email %></td>
+        <td><%= user.login.email %></td>
         <td>
-          <% MasterSkill.find(user.master_skill_ids).each do |skill| %>
+          <% user.master_skills.each do |skill| %>
             <%= skill.skill_name %>
           <% end %>
         </td>
         <td><%= user.master_role.role_name %></td>
         <td>
-          <% MasterProject.find(user.master_project_ids).each do |project| %>
+          <% user.master_projects.each do |project| %>
             <%= project.proj_name %>
           <% end %>
         </td>
