Added UI components to dashboard

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,5 +58,10 @@ body {
 }
 
 .team-listing {
+  border-radius: 20px;
   background-color: white;
+}
+
+.left-align {
+  text-align: left !important;
 }
