--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,11 +36,25 @@ body {
 
 .card.card-profile {
   border-radius: 20px;
-  margin-top: 160px;
+  margin-top: 120px;
   position: fixed;
   width: 80%;
-  height: 100px;
+  height: 110px;
   width: 80%;
+}
+
+.card.profile-info {
+  height: 100%;
+  width: 100%;
+  margin-top: 50px;
+  border-radius: 20px;
+}
+
+.card.profile-tab {
+  height: 100%;
+  width: 100%;
+  margin-top: 50px;
+  border-radius: 20px;
 }
 
 .top {
